# asynmov

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/asynmov-core/: Cargo.toml
crates/asynmov-core/src/: config.rs  lib.rs  rng.rs
crates/asynmov-core/src/generators/: entities.rs
crates/asynmov-node/: Cargo.toml
crates/asynmov-node/src/: lib.rs
crates/asynmov-py/: Cargo.toml
crates/asynmov-py/src/: lib.rs
docs/: 0-MISSION.md  1-EXPERIENCE.md  2-REQUIREMENTS.md  3-ARCHITECTURE.md  4-TESTING.md  README.md
docs/examples/: american_historical.toml
npm/: index.d.ts  index.js  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
python/asynmov/: __init__.py  cli.py  corpus.py  world.py
src/: lib.rs  rng.rs
src/generators/: entities.rs
