[package]
name = "asynmov"
version = "0.1.0"
edition = "2021"
description = "Rust core for the asynmov synthetic world-building data generator"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rand = "0.9"
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
