[package]
name = "asynmov"
version = "0.0.2"
edition = "2021"
description = "Rust core for the asynmov synthetic world-building data generator"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
