[package]
name = "asynmov-core"
version = "0.0.2"
edition = "2021"
description = "Pure Rust core for asynmov — no FFI"
license = "MIT"

[dependencies]
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", features = ["parse"] }
thiserror = "2"
