[package]
name = "asynmov-py"
version = "0.0.2"
edition = "2021"
description = "PyO3 Python bindings for asynmov"
license = "MIT"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
asynmov-core = { path = "../asynmov-core" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
pyo3-polars = { version = "0.20", features = [] }
polars = { version = "0.46", default-features = false, features = ["lazy"] }
serde_json = "1"
